--- a/css/login2.css
+++ b/css/login2.css
@@ -6,13 +6,14 @@ margin: 0;
 background-image: url("https://images.pexels.com/photos/7267852/pexels-photo-7267852.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
 background-repeat:no-repeat;
 background-size: cover;
+width: 100%;
 }
+
 .contenedor-principal{
     width: 100%;
     height: 100vh;
     display: flex;
     align-items: center;
-    justify-content: center;
     justify-content: flex-end;
 }
 
@@ -175,5 +176,47 @@ background-size: cover;
 }
 
 
+@media (max-width: 450px) {
+     .contenedor-principal {
+        flex-direction: column; 
+        justify-content: flex-start;  
+        padding: 0;
+        margin: 0; 
 
+    }
+    .contenedor-principal img{
+        width: 100px;
+        height: 100px;
+        transform: translateX(0);
+     }
+    .contenedor-formulario {
+        height: 67%;
+       width: 200px;
+       border-radius: 30px;
+    }
+    .iconos {
+        margin-top: 20px;
+        margin-bottom: 10px;
+    } 
+    .formularios .formulario-login,
+    .formularios .formulario-register{
+    width: 220px;
+    margin-top: 15px;
+}
+.formularios .formulario-login div input,
+.formularios .formulario-register div input{
+    width: 220px;
+    margin-bottom:30px ;
+    font-size: 20px;
+    outline: none;
+}
+.formularios .formulario-login div label,
+.formularios .formulario-register div label{
+  margin-top: 10px;
+}
+
+.boton-register,
+.boton-login{
+    width: 216px;
+}
 
